# ny-music

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: github-actions-linux.yml
music_info/: list
src/: App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Music.jsx
