[package]
name = "ny-music"
version = "1.3.0"
description = "ny music player"
authors = ["rustacean@5-23.dev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["macos-private-api", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.4.0"
lazy_static = "1.4.0"
discord-rich-presence = "0.2.3"


[target."cfg(target_os = \"windows\")".dependencies]
windows-version = "0.1"

[target."cfg(target_os = \"windows\")".dependencies.windows-sys]
version = "0.52.0"
features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemInformation",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_UI_WindowsAndMessaging",
]

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"
objc = "0.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
