[package]
name = "ny-music"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ny_music_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.5.0"
lazy_static = "1.4.0"
discord-rich-presence = "0.2.3"
tauri-plugin-shell = "2.0.0-rc.0"

[dependencies]
tauri = { version = "2.0.0-rc", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
discord-rich-presence = "0.2.4"
window-vibrancy = "0.5.0"
lazy_static = "1.4.0"

